samples/_failures_safe/1761665350_8bc03b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2162d596.c: In function ‘main’:
./samples/SAFE/__tmp_2162d596.c:145:9: error: expected declaration or statement at end of input
  145 |         mat2.rows = read_int("Enter rows for second matrix (1-100): ", 1, MAX_DIM);
      |         ^~~~
./samples/SAFE/__tmp_2162d596.c:145:9: error: expected declaration or statement at end of input
